--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,163 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  height: 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: var(--font-calibri);
+  font-size: 20px;
+  line-height: 1.6;
+  font-weight: 300;
+  height: 100%;
+}
+h1 {
+  font-size: 51px;
+  font-weight: 500;
+  font-family: var(--font-georgia);
+  line-height: 1.24;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.header {
+  height: 140px;
+  background: linear-gradient(
+    180deg,
+    #051c2c 0%,
+    rgba(5, 28, 44, 0.7) 60%,
+    rgba(5, 28, 44, 0) 100%
+  );
+}
+.hero {
+  background-image: url("../assets/hero-line.png"),
+    radial-gradient(
+      70.71% 70.71% at 50% 50%,
+      #00a9f4 14%,
+      #2251ff 50%,
+      #042a76 100%
+    );
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.book-bg {
+  background-image: url("../assets/book-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.atomic {
+  background-image: url("../assets/atomic.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.never {
+  background-image: url("../assets/never-just-tech.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.colourful {
+  background-image: url("../assets/colourful.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.blog-list {
+  grid-template-columns: 1fr 1fr;
+}
+.blog-item {
+  transition: 0.3s;
+  width: 100%;
+  position: relative;
+}
+.blog-item .wrap {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: 0.3s ease;
+}
+.blog-item:hover .wrap {
+  scale: 1.05;
+}
+.conference {
+  transition: 0.5s ease;
+  grid-area: 1/1/3/2;
+  height: 560px;
+}
+.conference .wrap {
+  background-image: url("../assets/conference.png");
+}
+.conference .info {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 64px 71px 42px 40px;
+  background: linear-gradient(0deg, #fff 70%, rgba(0, 0, 0, 0) 100%);
+  opacity: 0.5;
+}
+.conference:hover p {
+  color: #2251ff;
+}
+.conference:hover h1 {
+  color: #2251ff;
+}
+.vawe {
+  grid-area: 1/2/2/3;
+  height: 320px;
+}
+.vawe .wrap {
+  background-image: url("../assets/wave.png");
+}
+.vawe .info {
+  padding: 116px 72px 40px 40px;
+}
+.mobile {
+  grid-area: 2/2/3/3;
+  height: 240px;
+  background: #051c2c;
+}
+.mobile .info {
+  width: 50%;
+  padding: 66px 40px;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
+}
+.island {
+  grid-area: 3/1/4/2;
+  height: 400px;
+}
+.island .wrap {
+  background-image: url("../assets/island.png");
+}
+.island .info-wrap {
+  padding: 40px 72px 40px 40px;
+}
+.model {
+  grid-area: 3/2/4/3;
+  height: 400px;
+}
+.model .wrap {
+  background-image: url("../assets/model.png");
+}
+.model .info-wrap {
+  padding: 40px 72px 40px 40px;
+}
+.office {
+  background-image: url("../assets/office.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: 0.3s ease;
+}
+.help {
+  background: linear-gradient(97deg, #051c2c 60%, #03339c 100%);
 }
