--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
   font-family: var(--font-calibri);
   font-size: 20px;
   line-height: 1.6;
-  font-weight: 300;
+  font-weight: 700;
   height: 100%;
 }
 h1 {
@@ -28,13 +28,23 @@ h1 {
 }
 
 .header {
-  height: 140px;
   background: linear-gradient(
     180deg,
     #051c2c 0%,
     rgba(5, 28, 44, 0.7) 60%,
     rgba(5, 28, 44, 0) 100%
   );
+}
+.accordion {
+  transition: 0.5s;
+}
+.nav-item a {
+  font-weight: 300;
+  font-size: 16px;
+  text-decoration-thickness: 4px;
+}
+.nav-item:hover .accordion {
+  transform: rotate(180deg);
 }
 .hero {
   background-image: url("../assets/hero-line.png"),
@@ -48,6 +58,13 @@ h1 {
   background-size: cover;
   background-position: center;
 }
+.arrow {
+  transition: all 0.5s ease;
+}
+.arrow-wrap:hover .arrow {
+  transform: translateX(100%);
+}
+
 .book-bg {
   background-image: url("../assets/book-bg.png");
   background-repeat: no-repeat;
@@ -86,6 +103,12 @@ h1 {
   background-position: center;
   transition: 0.3s ease;
 }
+.blog-item:hover {
+  cursor: pointer;
+}
+.blog-item:hover p {
+  color: #2251ff;
+}
 .blog-item:hover .wrap {
   scale: 1.05;
 }
@@ -122,6 +145,7 @@ h1 {
 .vawe .info {
   padding: 116px 72px 40px 40px;
 }
+
 .mobile {
   grid-area: 2/2/3/3;
   height: 240px;
@@ -142,6 +166,17 @@ h1 {
 .island .info-wrap {
   padding: 40px 72px 40px 40px;
 }
+.underline {
+  text-decoration-color: red;
+}
+@media (max-width: 1600px) {
+  .vawe .info {
+    padding: 40px;
+  }
+  .island .info-wrap {
+    padding: 40px;
+  }
+}
 .model {
   grid-area: 3/2/4/3;
   height: 400px;
@@ -161,4 +196,100 @@ h1 {
 }
 .help {
   background: linear-gradient(97deg, #051c2c 60%, #03339c 100%);
+}
+.read {
+  right: auto;
+  left: 0;
+}
+.footer a {
+  font-size: 14px !important;
+  font-weight: 700;
+  color: black;
+  font-family: var(--font-calibri);
+}
+.footer p {
+  font-size: 14px !important;
+}
+@media (max-width: 1180px) {
+  .blog-list {
+    grid-template-columns: 1fr;
+  }
+  .blog-item {
+    grid-area: auto !important;
+  }
+  .blog-item .wrap {
+    background-size: 183%;
+  }
+  .conference .wrap {
+    background-size: 183%;
+  }
+  .vawe .wrap {
+    background-size: 183%;
+  }
+  h1 {
+    font-size: 44px;
+  }
+  .model {
+    flex-direction: row-reverse;
+  }
+  .read {
+    right: 0;
+    left: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .hero {
+    height: 90vh;
+    background-image: url("../assets/someone.png"),
+      url("../assets/hero-line.png"),
+      radial-gradient(
+        70.71% 70.71% at 50% 50%,
+        #00a9f4 14%,
+        #2251ff 50%,
+        #042a76 100%
+      );
+    background-repeat: no-repeat;
+    background-size: 100%, cover, cover;
+    background-position: top center, center, center;
+  }
+  .blog-item {
+    flex-direction: column;
+    height: 100vw;
+  }
+  .header {
+    background: none;
+  }
+  h1 {
+    font-size: 36px;
+  }
+  .mobile .info {
+    width: 100%;
+    padding: 32px 10px;
+  }
+  .conference .info {
+    padding: 40px 10px;
+  }
+  .vawe .info {
+    background: linear-gradient(0deg, #000 70%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0.7;
+    padding: 40px 10px;
+  }
+  .island .info-wrap {
+    background: linear-gradient(0deg, #000 70%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0.7;
+    padding: 40px 10px;
+  }
+  .model .info-wrap {
+    background: linear-gradient(0deg, #000 70%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0.7;
+    padding: 40px 10px;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero {
+    background-size: 110%, 0, cover;
+    background-position: top 100px center, center, center;
+  }
 }
